fix： select 多选labelClear模式下在form中的显示问题；vertical-align处理方式回退

--- a/source/components/Form/style/index.less
+++ b/source/components/Form/style/index.less
@@ -167,6 +167,10 @@ form {
     :not(.@{fishd-prefix}-input-group-addon) > .@{fishd-prefix}-select .@{fishd-prefix}-select-selection-selected-value {
       padding-right: 42px;
     }
+    //Fix labelClear 模式下icon被覆盖
+    .@{fishd-prefix}-select .@{fishd-prefix}-select-option-clearable-list {
+      padding-right: 30px;
+    }
 
     .@{fishd-prefix}-cascader-picker {
       &-arrow {
